--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "short_name": "AlphaWOD",
-  "name": "AlphaWOD App",
+  "short_name": "AlphaFIT",
+  "name": "AlphaFIT App",
   "icons": [
     {
-      "src": "logo192.png",
+      "src": "icon-512.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "logo512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
