--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,14 @@
   "name": "AlphaFIT",
   "icons": [
     {
-      "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "logo192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "logo512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
