--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
-    "firebase": "^11.8.1",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.9.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
